# pixocrop

./: .gitignore  COPYRIGHT  LICENSE  Makefile  README.md  TRADEMARKS.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: dev-build.yml  release.yml
assets/: pixoCrop.icns
data/anonymized/: README.md
docs/: index.html
docs/static/: script.js  style.css
packaging/: create_packaging_art.py
packaging/linux/: io.github.pixoglace.pixocrop.metainfo.xml
packaging/windows/: pixoCrop.iss
src/pixocrop/: __init__.py  app.py  config.py  detection.py  language_config.py  pdf_ops.py  print_utils.py  theme.py
tests/: test_detection.py
tools/: create_demo_assets.py
