[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pixoCrop"
dynamic = ["version"]
description = "GUI simple pour detecter, recadrer et imprimer des bordereaux d'expedition PDF."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "PixoGlace" },
]
keywords = ["pdf", "printing", "shipping-labels", "pyside6", "pixoglace"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Printing",
]
dependencies = [
    "numpy>=1.26",
    "PyMuPDF>=1.24",
    "Pillow>=10",
    "PySide6>=6.7",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]
dev = ["pytest>=8.0"]

[project.scripts]
pixoCrop = "pixocrop.app:main"

[project.urls]
Homepage = "https://github.com/PixoGlace/pixoCrop"
Repository = "https://github.com/PixoGlace/pixoCrop"
Issues = "https://github.com/PixoGlace/pixoCrop/issues"
Funding = "https://www.buymeacoffee.com/pixoglace"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "pixocrop.config.VERSION" }
